# chess_v1

./: .gitignore  CMakeLists.txt  README.md
src/: board.c  board.h  config.h  main.c  piece.c  piece.h  render.c  render.h  ui.c  ui.h  utils.c  utils.h
